Production-Cluster-eks/VS/gateway-sosotech-io.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: general-gateway
  namespace: istio-system
  labels:
    app.kubernetes.io/instance: ingressgateway
    app: istio-ingressgateway
    istio: ingressgateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
    # Upgrade HTTP to HTTPS
    tls:
      httpsRedirect: true
  - hosts:
    - '*'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: gateway-certs     # must match the name of tls.yaml

      # app.kubernetes.io/managed-by=Helm
      # app.kubernetes.io/name=ingressgateway
      # app.kubernetes.io/version=1.16.1
      # app=ingressgateway
      # helm.sh/chart=gateway-1.16.1
      # istio=ingressgateway
