Production-Cluster-eks/VS/argocd.yaml
apiVersion: networking.istio.io/v1alpha3 #networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
  namespace: argocd
spec:
  gateways:
    - istio-system/general-gateway
  hosts:
    - argocd.globalwealthorder.com
  http:
    - route:
      - destination:
          host: argocd-server
          port:
            number: 80
